# Kangni-agents

./: .env.backup  .env.template  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  description.txt  dev_server.sh  fix_database.py  ollama_config_example.py  prod_server.sh  pull_latest_docker_image.sh  pyproject.toml  pytest.ini  rag_results.txt  run.py  run_test.sh  run_tests.py  start_server.sh  test_all.py  test_cases.py  test_enhanced_preprocessing.py  test_order_enhancement.py  test_preprocessing.py  test_query_preprocessing.py  test_rag.py  test_results.json  test_simple_preprocessing.py
alembic/: env.py
alembic/versions/: 006477fcc163_initial_migration_for_query_history.py  4e5ea368d3fa_convert_embedding_column_to_pgvector_.py  5a6b7c8d9e0f_add_memory_system_tables_and_fields.py  a1b2c3d4e5f6_add_rewritten_question_to_query_history.py  e1af37c3d2d7_add_vector_embedding_tables_for_field_.py
dcoker/: compose.yaml  docker-compose.yml
docker/: README.md  docker-compose.yml  env.example  init.sql
docs/: DOCKER_DEPLOYMENT_SUMMARY.md  GITLAB_CI_SETUP.md  HISTORY_IMPLEMENTATION.md  LLM_USAGE_GUIDE.md  QUERY_PREPROCESSOR_SOLUTION.md  TESTING.md  workflow_graph.mermaid
examples/: llm_usage_example.py
scripts/: README.md  dev.sh  setup.sh
src/agents/: __init__.py
src/database/: mysqlMCPServer.py
src/kangni_agents/: __init__.py  config.py  main.py  rag_searcher.py
src/rag_flow/: download_files.py
src/resources/: description.txt  history.db  nl2sql.csv
src/test/: demo_memory_tests.py  test_8d_analysis.py  test_admin_review.py  test_cases.py  test_embedding.py  test_enhanced_preprocessing.py  test_history.py  test_llm_answer_endpoint.py  test_llm_connection.py  test_memory_service.py  test_process_query_history_id.py  test_query_preprocessing.py  test_rag.py  test_rag_llm_integration.py  test_react_agent_enhanced_validation.py  test_react_agent_fixes.py  (+5 more)
(+40 files in other folders)
