[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kangni-agents"
version = "0.1.0"
description = "AI agent system"
authors = [{name = "duxin"}]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]